syntax = "proto3";

package monitoring;

// Add this line to specify the Go package path
option go_package = "github.com/smnzlnsk/opentelemetry-components/processor/oakestraprocessor/proto";

// Service definition
service MonitoringService {
  rpc NotifyDeployment (MonitoringDeploymentRequest) returns (MonitoringResponse) {}
  rpc NotifyDeletion (MonitoringDeletionRequest) returns (MonitoringResponse) {}
}

message MonitoringDeploymentRequest {
  string job_name = 1;
  string job_hash = 2;
  int32 instance_number = 3;
  ResourceInfo resource = 4;
}

message ResourceInfo {
  string cpu = 1;
  string memory = 2;
  string gpu = 3;
  string disk = 4;
  NetworkInfo network = 5;
}

message NetworkInfo {
  string bandwidth_in = 1;
  string bandwidth_out = 2;
}

message MonitoringResponse {
  bool acknowledged = 1;
  string message = 2;
} 

message MonitoringDeletionRequest {
  string job_name = 1;
  int32 instance_number = 2;
}